게시판 게시글 등록 및 단순 조회 기능 구현 (페이징, 검색 x)

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -24,7 +24,7 @@
         <tr th:unless="${#lists.size(boards) == 0}" th:each="board : ${boards}">
             <td th:text="${board.id}">번호</td>
             <td th:text="${board.title}">제목</td>
-            <td th:text="${board.member}">글쓴이</td>
+            <td th:text="${board.email}">글쓴이</td>
             <td th:text="${board.createDate}">등록일</td>
             <td th:text="${board.hits}">조회</td>
         </tr>
