--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -9,6 +9,9 @@
     <ul>
       <li th:text="${member.name}">이름</li>
       <li th:text="${member.email}">이메일</li>
+      <button onclick="location.href='/logout'">로그아웃</button>
     </ul>
   </div>
+
+  <hr color = "red">
 </nav>
