게시판 게시글 등록 및 단순 조회 기능 구현 (페이징, 검색 x)

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -26,7 +26,7 @@
             <td th:text="${board.title}">제목</td>
             <td th:text="${board.email}">글쓴이</td>
             <td th:text="${board.createDate}">등록일</td>
-            <td th:text="${board.hits}">조회</td>
+            <td th:text="${board.hits}">조회1</td>
         </tr>
 
     </table>
