--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 
 </head>
 <body>
@@ -27,7 +27,7 @@
             <td th:text="${board.id}">번호</td>
             <td><a th:text="${board.title}" th:href="@{/board/{id}/details(id=${board.id})}">제목</a></td>
             <td th:text="${board.email}">글쓴이</td>
-            <td th:text="${board.createDate}">등록일</td>
+            <td th:text="${{board.createDate}}"></td>
             <td th:text="${board.hits}">조회1</td>
         </tr>
 
