--- a/src/main/resources/templates/board/details.html
+++ b/src/main/resources/templates/board/details.html
@@ -63,6 +63,23 @@
         <div><button type="button" th:onclick="editTask([[${board.id}]])">수정</button></div>
         <div><button type="button" th:onclick="deleteTask([[${board.id}]])">삭제</button></div>
     </div>
+
+    <div>
+        <div>
+            <h2>댓글</h2>
+        </div>
+        <div><hr></div>
+
+        <div>
+            <form action="/member/comment/write" method="post">
+                <input type="hidden" th:field="${member.email}">
+                <input type="hidden" th:field="${board.id}">
+                <textarea id="content" value=""></textarea>
+                <button type="submit">등록</button>
+            </form>
+        </div>
+
+    </div>
 </main>
 
 </body>
